Update git post

--- a/_posts/2016-06-04-git.md
+++ b/_posts/2016-06-04-git.md
@@ -6,21 +6,22 @@ title: Starting out with git
 Revision control systems (RCSes) - are softwares that keep snapshots of various versions of the program in the development of a project, sort of like manuscripts of a book being written or a pathetic love letter with multiple additions and deletions. This helps us to keep record of every little change in the software we have made, and if things fail we can go back to the previous state. 
 
 	
-#Time travellers
-RCS gives us the power to go back in time - sort of time travel techniques, meaning to say we can look what a file(system) looked like before I made some changes to it (and probably messed it up). We can keep many copies of same project - and keep making changes to it without effecting the other copies (like "Hey, this is my copy, you write on your copy"). Also, it may be necessary that I want to experiment on something in my code - and not want to mess with the original stuff, so I will make a separate "branch" of my copy and then play with it.  
+# Time travellers
+RCS gives us the power to go back in time - sort of time travel techniques, meaning to say we can look what a file(system) looked like before I made some changes to it (and probably messed it up). We can keep many copies of same project - and keep making changes to it without effecting the other copies (like "Hey, this is my copy, you write on your copy"). Also, it may be necessary that I want to experiment on something in my code - and not want to mess with the original stuff, so I will make a separate "branch" of my copy and then play with it.
 
 
 It so might happen that other person (with a separate copy) wrote something very nice - and it needs to be incorporated in the original main source code. How will I get this code without messing up the whole different copy setup? A simple answer would be - merge the main copy with "new good thing" that needed to be added to the main source code. You can merge the main source code with your personal copy later. But how is it done?
 
 
-#Git, what?
+# Git, what?
 Git is a distributed revision control system - this means that any given copy of the project works as a standalone copy of the "repository" and it's history. Any new changes will have to incorporated again. Others include Mercurial and Bazaar.
 
 
-#What do POSIX guys say?
+# What do POSIX guys say?
 POSIX has set up standards for all UNIX like machines. Some commands described in POSIX standard serve as building blocks for the RCS. These POSIX standard commands are diff and patch.
 diff compares the files line by line. 
-```shell
+
+```bash
 	diff file1.c file2.c > diffs
 	diff -u file1.c file2.c 
 	#lists all the lines removed from file1.c, and all new lines added in file2.c
@@ -31,19 +32,23 @@ diff compares the files line by line.
 	#file1.c is patched in reverse order - i.e. restored to initial state
 ```
 
-#Where is it used?
+# Where is it used?
 Suppose I have a project I am working on. After releasing the first version, I work on the second version. At the end of completion of second version (or everytime I finish work during the day), I run 
-```shell
+
+```bash
 diff -ur v1.c v2.c > diff-v1v2 
 ```
+
 The main file can be patched later with patch < diff-v1v2. In case I run into a bug, I will run 
-```shell	
+
+```bash	
 patch -R < diff-v1v2.
 ```
+
 But this entire process of keeping diffs and patching is a tedious task, so RCS's do this task for us.
 
 
-#Understanding git
+# Understanding git
 Git is a C program. It's based on small set of objects. The key object is the commit object, which is nothing but a set of diff, (sort of successive diffs after each commit). Given a previous commit object and set of changes made to the previous one, a new commit encapsulates all this information. Index (the list of changes made to the file since the last commit) helps in generation of the new commit. 
 
 
@@ -52,7 +57,7 @@ command apply to the whole repository - like new, copy, free etc.
 
 
 To initialize an empty git repository you can do 
-```shell
+```bash
 git init
 The file is hidden.
 To make a copy of your own from code on the internet - 
@@ -61,7 +66,7 @@ git clone http://url.com/file.git
 
 If you want to meddle with the code, but are afraid that you'll spoil the thing, then (if the 
 repository is in ~/path/to/repo/file.c) you can locally copy the code using -
-```shell
+```bash
 git clone ~/path/to/repo/file.c
 ```
 Meddle with it, and when you're done, delete it. 
@@ -71,18 +76,18 @@ Meddle with it, and when you're done, delete it.
 All the git data is in .git folder. So freeing the code from git is equivalent to - rm -rf ~/path/to/repo/.git
 Everything is very self contained (read standalone copies of the repository and it's history), it can be easily copied, and quick experimentation can be done.
 The *index* (Git source : struct index_state) is the list of changes to be bundles into next commit. It exists as we don't want every change in the repository to be committed. Suppose there are files : file.h, file.c, file.o and file (executable), then maybe if we want to track changes in the file.h and file.c, and let the rest be regenerated (simply put we don't want to track them, as they are not part of the source code), we will do -
-```shell
+```bash
 git add file.h file.h
 Similarly we can 
 git rm file.h
 git mv file.c new_file.c
 ```
 Changes made to file already tracked by git is not done automatically, which is different from other RCSes. To do this, we can either add every file again individually, by git add file_name.c or we can use:
-```shell
+```bash
 git add -u 
 ```
 When we have added enough of index changes added to the tracker, we might want to commit the changes using :
-```shell
+```bash
 git commit -a -m "Message goes here"
 ```
 The -m adds the message to the commit, which ideally should summarize all the changes added and 
@@ -90,7 +95,7 @@ committed. It is recommended to enter commit message, for maybe sometime in the 
 looking at the commits, and want to revert back to a certain commit in the past, without the message
 it would not be easy to recall which commit incorporated what changes. If we omit message here, then
 git will open up a text editor (the default one is vi, you can change in .bashrc/.zshrc/ rc file of 
-whatever shell you use). 
+whatever bash you use). 
 
 
 The -a command tells the git to automatically run git add -u before making this commit. If you only
@@ -116,7 +121,7 @@ The key metadata is the name of the object, which is assigned by the SHA1 hash, 
 hexadecimal number that can be assigned to an object - and that same object will have same name in 
 every copy of the repository. We can see the hash key using git log. To see a particular commit 
 state, we can do by :
-```shell
+```bash
 git checkout <key:only that many key elements that can successfully identify the commit object>
 ```
 
@@ -126,7 +131,7 @@ This is because commit only has pointers to it's parents.
 The rarely used git reflog will list all the commit the present repository knows about. 
 Better way to returning to a state is by using tags - maintained as separate objects with human 
 friendly name like 'master'. These tags hold a pointer to a commit object in the file. 
-```shell
+```bash
 git checkout master
 ```
 
@@ -142,7 +147,7 @@ directory. For example, if you are going to go spelunking into a previous commit
 cannot do so unless you commit the uncommitted changes or get rid of them or put the changes in the 
 stash. Stash is an special commit object - something that you would get from git commit -a, but also 
 with all the untracked files too. 
-```shell
+```bash
 git stash
 git checkout <hash1>
 .... do your thing ....
@@ -166,7 +171,7 @@ at the named tip and tracing back to the origin of the tree - root.
 The typical custom is to keep the master branch fully functional at all times. When you want to add 
 any new feature or do some inquiry - make another branch. When the branch is fully functional - we 
 can merge the the new feature back into the master.
-```shell
+```bash
 git brach new_branch
 git checkout new_branch
 #or equivalently
@@ -176,7 +181,7 @@ git branch
 ```
 #Paradox
 Here is something to think about : What will happen if buy a time machine, go back in time, and knock out the guy who made the time machine? The present doesn't change - it splinters off another history. So if you checkout to a past commit - and make some new commits - then if you do git branch - it will mention (no branch). 
-```shell
+```bash
 git branch new_branch_name <commit hash>
 ```
 GUI for seeing how branching has occurred can be seen via gitk or git instaweb (starts a web server
@@ -184,7 +189,7 @@ that lets us interact in the browser).
 
 #Merging 
 We can make two branches merge to incorporate the code from one branch to another. This is done by :
-```shell
+```bash
 git checkout master #suppose we want to merge into master
 git merge new_branch
 #If there are conflicts - they have to added and committed in the master branch and then merge will 
@@ -195,7 +200,7 @@ branch which is being merged to. This is called fast-forwarding in git.
 
 But if changes have been made in the master branch too, then it is not so simple. We will have to 
 resolve conflicts in such a case.
-```shell
+```bash
 git merge branch_name
 #message informing about the conflicts
 git status #gives the list of unmerged files
@@ -205,13 +210,13 @@ git status #gives the list of unmerged files
 
 #Deleting
 Deleting the branch can be done by:
-```shell
+```bash
 git delete branch_name
 ```
 
 #Rebase 
 When there are two branches from same common ancestor, then using the rebase command, we can change the rebase we can reset new common ancestor - as if the branching occured from the commit specified:
-```shell
+```bash
 git checkout _branch
 git rebase <hash key>
 ```
@@ -230,7 +235,7 @@ in the remote are reflected in your copy.
 Also, "git pull origin master" is equivalent to "git fetch; git merge remotes/origin/master"
 The converse is git push, used to update the contents in the remote.
 Suppose we are working on the branch bb, then we can push contents using :
-```shell
+```bash
 git push origin bb
 ```
 There are good odds that when we push our changes, applying the diffs from your branch to the remote
