Clear text in git article

--- a/_posts/2016-06-04-git.md
+++ b/_posts/2016-06-04-git.md
@@ -52,11 +52,11 @@ But this entire process of keeping diffs and patching is a tedious task, so RCS'
 Git is a C program. It's based on small set of objects. The key object is the commit object, which is nothing but a set of diff, (sort of successive diffs after each commit). Given a previous commit object and set of changes made to the previous one, a new commit encapsulates all this information. Index (the list of changes made to the file since the last commit) helps in generation of the new commit. 
 
 
-The commit objects link together to form a tree, stepping  up  or down a tree is equivalent to using  patch and patch -R commands. The repository, formally, is not a single object. But you can imagine to be one, as almost common 
-command apply to the whole repository - like new, copy, free etc.
+The commit objects link together to form a tree, stepping  up  or down a tree is equivalent to using  patch and patch -R commands. The repository, formally, is not a single object. But you can imagine to be one, as almost common command apply to the whole repository - like new, copy, free etc.
 
 
 To initialize an empty git repository you can do 
+
 ```bash
 git init
 The file is hidden.
@@ -66,27 +66,33 @@ git clone http://url.com/file.git
 
 If you want to meddle with the code, but are afraid that you'll spoil the thing, then (if the 
 repository is in ~/path/to/repo/file.c) you can locally copy the code using -
+
 ```bash
 git clone ~/path/to/repo/file.c
 ```
+
 Meddle with it, and when you're done, delete it. 
 
 
-#Behind the scenes
+# Behind the scenes
 All the git data is in .git folder. So freeing the code from git is equivalent to - rm -rf ~/path/to/repo/.git
 Everything is very self contained (read standalone copies of the repository and it's history), it can be easily copied, and quick experimentation can be done.
 The *index* (Git source : struct index_state) is the list of changes to be bundles into next commit. It exists as we don't want every change in the repository to be committed. Suppose there are files : file.h, file.c, file.o and file (executable), then maybe if we want to track changes in the file.h and file.c, and let the rest be regenerated (simply put we don't want to track them, as they are not part of the source code), we will do -
+
 ```bash
 git add file.h file.h
 Similarly we can 
 git rm file.h
 git mv file.c new_file.c
 ```
+
 Changes made to file already tracked by git is not done automatically, which is different from other RCSes. To do this, we can either add every file again individually, by git add file_name.c or we can use:
+
 ```bash
 git add -u 
 ```
 When we have added enough of index changes added to the tracker, we might want to commit the changes using :
+
 ```bash
 git commit -a -m "Message goes here"
 ```
@@ -121,6 +127,7 @@ The key metadata is the name of the object, which is assigned by the SHA1 hash, 
 hexadecimal number that can be assigned to an object - and that same object will have same name in 
 every copy of the repository. We can see the hash key using git log. To see a particular commit 
 state, we can do by :
+
 ```bash
 git checkout <key:only that many key elements that can successfully identify the commit object>
 ```
@@ -131,15 +138,21 @@ This is because commit only has pointers to it's parents.
 The rarely used git reflog will list all the commit the present repository knows about. 
 Better way to returning to a state is by using tags - maintained as separate objects with human 
 friendly name like 'master'. These tags hold a pointer to a commit object in the file. 
+
 ```bash
 git checkout master
 ```
 
 
-**git diff** :: Shows the difference between present state and last commit 
-**git diff <sha key of previous commit>** :: Shows the difference between present state and commit 
-	object
-**git diff <sha1> <sha2>** :: Shows the difference from one commit object and and the other
+**git diff** 
+
+Shows the difference between present state and last commit 
+
+**git diff {sha key of previous commit}** 
+
+ Shows the difference between present state and commit object
+
+**git diff {sha1} {sha2}** :: Shows the difference from one commit object and and the other
 
 
 Git doesn't like doing anything when there are uncommitted changes in the current working directory 
@@ -147,6 +160,7 @@ directory. For example, if you are going to go spelunking into a previous commit
 cannot do so unless you commit the uncommitted changes or get rid of them or put the changes in the 
 stash. Stash is an special commit object - something that you would get from git commit -a, but also 
 with all the untracked files too. 
+
 ```bash
 git stash
 git checkout <hash1>
@@ -154,11 +168,15 @@ git checkout <hash1>
 git checkout master
 git stash pop
 ```
-Another way is to get rid of all the changes made since last commit - this is done by :
-git reset --hard
 
-#Trees in git 
-As soon as a user runs git init - it becomes tree's root node. Except all the initial commit - all  
+Another way is to get rid of all the changes made since last commit - this is done by :
+
+```bash
+git reset --hard
+```
+
+# Trees in git 
+As soon as a user runs git init - it becomes tree's root node. Except all the initial commit - all
 the commits have a parent commit and the commit records the difference between it and the parent 
 commit. The terminal node in the sequence, the tip of the branch is tagged with the branch name. For 
 our purposes there is one-to-one correspondence between the branch tips and the series of diffs that 
@@ -171,6 +189,7 @@ at the named tip and tracing back to the origin of the tree - root.
 The typical custom is to keep the master branch fully functional at all times. When you want to add 
 any new feature or do some inquiry - make another branch. When the branch is fully functional - we 
 can merge the the new feature back into the master.
+
 ```bash
 git brach new_branch
 git checkout new_branch
@@ -179,27 +198,35 @@ git checkout -b new_branch
 #What branch you are right now in?
 git branch
 ```
-#Paradox
+
+# Paradox
 Here is something to think about : What will happen if buy a time machine, go back in time, and knock out the guy who made the time machine? The present doesn't change - it splinters off another history. So if you checkout to a past commit - and make some new commits - then if you do git branch - it will mention (no branch). 
+
 ```bash
 git branch new_branch_name <commit hash>
 ```
+
 GUI for seeing how branching has occurred can be seen via gitk or git instaweb (starts a web server
 that lets us interact in the browser). 
 
-#Merging 
+# Merging 
 We can make two branches merge to incorporate the code from one branch to another. This is done by :
+
 ```bash
 git checkout master #suppose we want to merge into master
 git merge new_branch
 #If there are conflicts - they have to added and committed in the master branch and then merge will 
 	be completed
 ```
-Fast-forward - When we merge a branch, all the diffs in the branch are automatically added to the 
+
+**Fast-forward**
+
+When we merge a branch, all the diffs in the branch are automatically added to the 
 branch which is being merged to. This is called fast-forwarding in git.
 
 But if changes have been made in the master branch too, then it is not so simple. We will have to 
 resolve conflicts in such a case.
+
 ```bash
 git merge branch_name
 #message informing about the conflicts
@@ -208,14 +235,16 @@ git status #gives the list of unmerged files
 #keep repeating the above till all the files have been merged 
 ```
 
-#Deleting
+# Deleting
 Deleting the branch can be done by:
+
 ```bash
 git delete branch_name
 ```
 
-#Rebase 
+# Rebase 
 When there are two branches from same common ancestor, then using the rebase command, we can change the rebase we can reset new common ancestor - as if the branching occured from the commit specified:
+
 ```bash
 git checkout _branch
 git rebase <hash key>
@@ -223,7 +252,7 @@ git rebase <hash key>
 
 Typical usage is to rebase from master branch to side branch. As letting the diffs pile up can lead to very painful merge in the end, rebasing often is a good idea.
 
-#Remotes repositories 
+# Remotes repositories 
 The repository has pointers called remotes, which are pointers to other related repositories around
 the world. When we clone a repository, it creates a remote from where the repository has been cloned 
 called "origin". In the typical case, this is the only remote we will ever use.
@@ -232,9 +261,10 @@ original repository had. Running git branch -a will give all the branches the gi
 
 To update the repository cloned, we need to run git fetch so that all the new changes incorporated 
 in the remote are reflected in your copy.
-Also, "git pull origin master" is equivalent to "git fetch; git merge remotes/origin/master"
+Also, `git pull origin master` is equivalent to `git fetch; git merge remotes/origin/master`
 The converse is git push, used to update the contents in the remote.
 Suppose we are working on the branch bb, then we can push contents using :
+
 ```bash
 git push origin bb
 ```
@@ -248,8 +278,7 @@ sure that all the git push are fast forward only, which is done by :
 	*Run git commit -a -m "Deal with merges"
 	*Run git push origin master, as now only a single diff is left, git will merge it automatically
 
-**git init --bare** : This command restricts anyone to actually do any work in that directory, users will have to clone to do 
-anything at all. Sometimes --shared=group type flags come in handy.
+_git init --bare_ : This command restricts anyone to actually do any work in that directory, users will have to clone to do anything at all. Sometimes `--shared=group` type flags come in handy.
 
 Or we can create a public bare repository, and create private working repository. We push to the 
 public bare repository, only to later pull the changes later to the working repository. 
