--- a/_posts/2016-06-04-git.md
+++ b/_posts/2016-06-04-git.md
@@ -3,6 +3,7 @@ layout: post
 title: Starting out with git
 ---
 
+![an image alt text]({{ site.baseurl }}/images/git.png "Git : Revision Control System")
 
 Revision control systems (RCSes) - are softwares that keep snapshots of various versions of the program in the development of a project, sort of like manuscripts of a book being written or a pathetic love letter with multiple additions and deletions. This helps us to keep record of every little change in the software we have made, and if things fail we can go back to the previous state.
 
@@ -22,14 +23,14 @@ POSIX has set up standards for all UNIX like machines. Some commands described i
 diff compares the files line by line.
 
 ```bash
-	diff file1.c file2.c > diffs
-	diff -u file1.c file2.c
-	#lists all the lines removed from file1.c, and all new lines added in file2.c
-	diff -ur file1.c file2.c > diffs
-	patch < diffs
-	#causes file1.c to be patched with file2.c - file1.c becomes same as file2.c
-	diff -R < diffs
-	#file1.c is patched in reverse order - i.e. restored to initial state
+diff file1.c file2.c > diffs
+diff -u file1.c file2.c
+#lists all the lines removed from file1.c, and all new lines added in file2.c
+diff -ur file1.c file2.c > diffs
+patch < diffs
+#causes file1.c to be patched with file2.c - file1.c becomes same as file2.c
+diff -R < diffs
+#file1.c is patched in reverse order - i.e. restored to initial state
 ```
 
 ## Where is it used?
@@ -59,12 +60,11 @@ To initialize an empty git repository you can do
 
 ```bash
 git init
-The file is hidden.
-To make a copy of your own from code on the internet -
+#To make a copy of your own from code on the internet -
 git clone http://url.com/file.git
 ```
 
-If you want to meddle with the code, but are afraid that you'll spoil the thing, then (if the
+This create a new hidden folder, to store all of version control files. If you want to meddle with the code, but are afraid that you'll spoil the thing, then (if the
 repository is in ~/path/to/repo/file.c) you can locally copy the code using -
 
 ```bash
@@ -188,7 +188,7 @@ git commit
 Or using:
 
 ```
-git commit --ammend
+git commit --amend
 # make changes
 git add whatever_you_wish_to_add
 git commit
