Modify photography thread 01

--- a/_posts/2016-07-10-dslr1.md
+++ b/_posts/2016-07-10-dslr1.md
@@ -3,6 +3,8 @@ layout: post
 title: Photography 1.0 - Introduction to DSLR
 ---
 
+![an image alt text]({{ site.baseurl }}/images/dslr/camera.png "DSLR : Camera")
+
 DSLR is an abbreviation for the Digital Single Lens Reflex camera. As the name points out, it uses digital image sensors with Single Lens Reflex (SLR) camera mechanism, which is a form of cameras very common in the past.
 If we look at a DSLR construction, the following parts happen to be very common across vendors:
 
