Fix sentence size in git thread

--- a/_posts/2016-06-04-git.md
+++ b/_posts/2016-06-04-git.md
@@ -235,8 +235,8 @@ We can make two branches merge to incorporate the code from one branch to anothe
 ```bash
 git checkout master #suppose we want to merge into master
 git merge new_branch
-#If there are conflicts - they have to added and committed in the master branch and then merge will
-	be completed
+#If there are conflicts - they have to added and committed
+#in the master branch and then merge will be completed
 ```
 
 **Fast-forward**
