--- a/_posts/2017-01-28-story2.md
+++ b/_posts/2017-01-28-story2.md
@@ -7,7 +7,7 @@ title: Story - Another cup of coffee
 
 
  It was near the place of her work, and she often came here whenever she managed to get a break. The crowd, the liveliness of the place gave her a sense of comfort, she felt warm and at peace. It wasn’t anything lavish – a simple restaurant overlooking the main market street. The street was full of it’s regular hustle bustle. It was chilly and a comparatively cloudy morning; scattered sunlight poured in from the big window. She ordered a cup of coffee.  
-As she sipped away from the steaming cup, she looked out of the open window. A man was giving his pet dog a walk. A mother was buying household stuff while her little boy, who appeared disheveled despite his mother’s every effort, bumbled along. Suddenly he turned around, and looked at her. She smiled. He smiled back.  
+As she sipped away from the steaming cup, she looked out of the open window. A man was giving his pet dog a walk. A mother was buying household stuff while her little boy, who appeared dishevelled despite his mother’s every effort, bumbled along. Suddenly he turned around, and looked at her. She smiled. He smiled back.  
 As a young girl, she never really liked children. How much she has changed since then, she thought. But her chain of thoughts were suddenly interrupted. It was the old man who ran the restaurant. She recognized him only by his face; it was a pity she didn’t ask for his name, she thought. Perhaps she hesitated too much. She felt it would indeed be awkward if she asked his name.  
 "Hello ma’am. It’s been awhile since you last came here” he beamed.  
 “Yeah, I have been lately a bit occupied with work” she said.  
@@ -74,7 +74,7 @@ _The hardest part of all._
 “But beta ...” the voice from the other side tried to calm her down.  
 “No means no. I agreed to all this only because you and Papa wanted it. But I am not going to marry again only for the sake of it.”  
 “But listen to me beta … “  
-“Listen to what? I already have had a lot of relatives giving me advice. I know you care about me mumma, but I will not marry anyone who thinks like that.  I have said it before, I’ll say it again. Neither do I want anyone to marry me out of favor; and especially not if they think I am some sort of damaged good.” she shrieked. She was furious. Often, anger was her refuge – to hide her real emotions.   
+“Listen to what? I already have had a lot of relatives giving me advice. I know you care about me mumma, but I will not marry anyone who thinks like that.  I have said it before, I’ll say it again. Neither do I want anyone to marry me out of favour; and especially not if they think I am some sort of damaged good.” she shrieked. She was furious. Often, anger was her refuge – to hide her real emotions.   
 “But …”   
 “What are you afraid of mumma? I am completely fine. I don’t need this. Haven’t we already tried this enough? I have had enough of marriage proposals coming from these relatives who blamed me for not being able to keep my marriage intact; these so called relatives who behind my back discuss my character and act as if I will steal their husbands or sons? You know what kind of proposals they keep sending. They can doubt as much as they want, I don’t care mumma. I don’t need their sympathy. And I will definitely not have you pay anything for my marriage. This is too much.” she screamed.  
 “I am just … thinking about your happiness beta ...” replied a sad voice.  
@@ -111,7 +111,7 @@ _A long silence persists._
 I won’t lie. It’s difficult, it’s very difficult at times. On the outside I keep calm and steady, but in the inside I often suffocate. But I don’t blame you.  
 I know all you ever wished was best for me. Things didn’t turn out as you wanted them to be. Marriages are decision taken in good faith. At the time of making the decision, we don’t suppose the possibility of entering a situation which is abusive and violent.  
 I did everything that I could to save this marriage. I put in every effort to please him, Ma. When he said you don’t need to work you; I quit my job, stayed at home. Confined within the four walls – I lost all my friends. I didn’t say anything when he sent my daughter over to his parent’s house. I overlooked everything – even his affairs. For what? Just to save this illusion of completeness? Happiness? For the sake of  this hypocritical society?  
-No ma, that wasn’t utopia. That was a mere fancy – an illusion –  which I was desperately clinging to. Love was gone years ago. Maybe it never really exisedt. I just hoped, that if I put in enough efforts, may be one day he’ll change his mind, he’ll appreciate me. I thought I’ll win him over with love and care. Maybe I’ll get the appreciation and love that I always dreamt of. I sacrificed my self esteem and personal growth – all for this so called marriage to work. But deep down I always knew, it would never work, that one day he’ll leave me.  
+No ma, that wasn’t utopia. That was a mere fancy – an illusion –  which I was desperately clinging to. Love was gone years ago. Maybe it never really existed. I just hoped, that if I put in enough efforts, may be one day he’ll change his mind, he’ll appreciate me. I thought I’ll win him over with love and care. Maybe I’ll get the appreciation and love that I always dreamt of. I sacrificed my self esteem and personal growth – all for this so called marriage to work. But deep down I always knew, it would never work, that one day he’ll leave me.  
 Maybe the phase of life I am in, right now is not utopia. There will always be a part of society which would never accept me, will treat me as an outcast.  
 But ma, you see, I am free now. I don’t live to please them, or anybody else now. It’s my life – and I think I am happy – and that’s all that matters now. My life is not governed by anyone else’s happiness.  
 As I look back now, I realize that I wasted some of my best years on something that was never meant to be. I don’t wish to fight him and the society. I don’t want to waste anymore time. I am no longer trapped. I choose to be happy, I will fight for it if the need be.”  
