Change name of git post

--- a/_posts/2016-06-04-git.md
+++ b/_posts/2016-06-04-git.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Starting out with git
+title: A gentle introduction to Revision Control Systems and Git
 ---
 
 ![an image alt text]({{ site.baseurl }}/images/git.png "Git : Revision Control System")
